--- a/index.html
+++ b/index.html
@@ -1,13 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <title>Bakery</title>
-</head>
-<body>
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/css/style.css" />
+		<title>Bakery</title>
+	</head>
+	<body>
+		<header>
+			<nav>
+				<a href="./index.html">
+					<img src="./img/bakeryLogo.png" alt="BakeryLogo"
+				/></a>
+				<a href="./team.html">Team</a>
+				<a href="./bestellen.html">Bestellen</a>
+				<a href="./customcakes.html">Custom Cakes</a>
+				<a href="./contact.html">Contact</a>
+			</nav>
+			<div class="heroNav">
+				<img src="hero.jpg" alt="" />
+			</div>
+		</header>
+		<main>
+			<section class="homeSection">
+				<h2>De oudste bakkerij van Hilgersom</h2>
+				<p>
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+					Eaque quas culpa odio blanditiis laudantium cumque
+					voluptatibus similique ipsum assumenda dolore ut quidem
+					corrupti molestiae, quos inventore, quo illo at pariatur
+					aliquam repudiandae illum? Error libero voluptas veniam
+					deleniti officia minus! Velit eius sit cum earum molestias
+					ex eos, voluptatum, placeat impedit, quis delectus tenetur
+					odit neque a ducimus. Possimus sed unde pariatur est totam
+					quibusdam quod nihil expedita cupiditate reiciendis.
+				</p>
+				<br />
+				<p>
+					Modi nihil saepe autem veniam ab dolorum voluptatem esse
+					odit accusantium libero distinctio perspiciatis soluta
+					fugiat molestiae cum dignissimos fuga aut labore tempore
+					ullam nam quibusdam quis, consectetur neque. Beatae natus
+					velit atque ea quibusdam rem amet enim delectus unde quos
+					sit eius cum ratione commodi ab neque id quas hic nihil
+					ipsum iste soluta, recusandae error asperiores? Delectus
+					dicta quam earum nam quod error illo mollitia quibusdam
+					ducimus fugit.
+				</p>
+			</section>
+			<section class="homeSection">
+				<h2>De oudste bakkerij van Hilgersom</h2>
+				<p>
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+					Eaque quas culpa odio blanditiis laudantium cumque
+					voluptatibus similique ipsum assumenda dolore ut quidem
+					corrupti molestiae, quos inventore, quo illo at pariatur
+					aliquam repudiandae illum? Error libero voluptas veniam
+					deleniti officia minus! Velit eius sit cum earum molestias
+					ex eos, voluptatum, placeat impedit, quis delectus tenetur
+					odit neque a ducimus. Possimus sed unde pariatur est totam
+					quibusdam quod nihil expedita cupiditate reiciendis.
+				</p>
+				<br />
+				<p>
+					Modi nihil saepe autem veniam ab dolorum voluptatem esse
+					odit accusantium libero distinctio perspiciatis soluta
+					fugiat molestiae cum dignissimos fuga aut labore tempore
+					ullam nam quibusdam quis, consectetur neque. Beatae natus
+					velit atque ea quibusdam rem amet enim delectus unde quos
+					sit eius cum ratione commodi ab neque id quas hic nihil
+					ipsum iste soluta, recusandae error asperiores? Delectus
+					dicta quam earum nam quod error illo mollitia quibusdam
+					ducimus fugit.
+				</p>
+			</section>
+		</main>
+	</body>
 </html>
