--- a/index.html
+++ b/index.html
@@ -26,15 +26,7 @@
 			<section class="homeSection">
 				<h2>De oudste bakkerij van Hilgersom</h2>
 				<p>
-					Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-					Eaque quas culpa odio blanditiis laudantium cumque
-					voluptatibus similique ipsum assumenda dolore ut quidem
-					corrupti molestiae, quos inventore, quo illo at pariatur
-					aliquam repudiandae illum? Error libero voluptas veniam
-					deleniti officia minus! Velit eius sit cum earum molestias
-					ex eos, voluptatum, placeat impedit, quis delectus tenetur
-					odit neque a ducimus. Possimus sed unde pariatur est totam
-					quibusdam quod nihil expedita cupiditate reiciendis.
+					Hoi Natasja!
 				</p>
 				<br />
 				<p>
